# lvgl-ui-detector

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  dataset_playground.ipynb  lvgl-ui-detector.code-workspace  lvgl-ui-detector_yolov8.ipynb  pyproject.toml  test-and-compare_pytorch.ipynb  test-and-compare_tensorflow.ipynb  tmp.sh  ui-detector.code-workspace
data/: classes.names  custom.data  my_image.txt  test.txt  train.txt  val.txt
data/dataset.3d50b5fa72dd4fc1a512f09f9b60be3d.j6pdfxyd/: design.yaml
data/dataset.c7a021a3ee7a4a3d8c15fb066a2d5967.7rhx4761/: random.yaml
data/early-testdata_v0.0.1/: custom.yaml
data/test/: ui_button_11.txt  ui_button_19.txt  ui_button_25.txt  ui_button_26.txt  ui_button_33.txt  ui_button_35.txt  ui_button_42.txt  ui_button_46.txt  ui_button_48.txt  ui_button_5.txt  ui_checkbox_17.txt  ui_checkbox_19.txt  ui_checkbox_22.txt  ui_checkbox_34.txt  ui_checkbox_41.txt  ui_checkbox_44.txt  ui_checkbox_46.txt  ui_checkbox_49.txt  ui_checkbox_7.txt  ui_label_2.txt  ui_label_24.txt  ui_label_27.txt  ui_label_29.txt  ui_label_31.txt  ui_label_32.txt  ui_label_4.txt  ui_label_44.txt  ui_label_47.txt  ui_label_49.txt  ui_label_8.txt  ui_progressbar_12.txt  ui_progressbar_14.txt  (+28 more)
doc/: Framework.drawio  project-architecture.drawio
notebook/: README.md  lvgl-ui-detector_pytorch.ipynb  lvgl-ui-detector_tensorflow.ipynb
scripts/: clearml_datasets.py  pull_clearml_data.py  pull_clearml_datasets.py  pull_clearml_tasks.py  run_container.sh  upload_datasets.py
src/: generate.py  main.py  train.py
weights/: .placeholder
(+877 files in other folders)
